<resources>
    <string name="app_name">대소고 대나무숲</string>
    <string name="title">%1$d번째 이야기</string>
    <string name="hash_tag">대소고_%1$d번째_이야기</string>
    <string name="fb">facebook</string>
    <string name="write_time">%1$s에 제보됨</string>
    <string name="allow_time">%1$s에 승인됨</string>
    <string name="allow">승인</string>
    <string name="deny">거부</string>
    <string name="admin_tip">승인 할 때 한 번 더 생각하기</string>
    <string name="more">더보기</string>
    <string name="home">매인</string>
    <string name="admin">관리자</string>
    <string name="report">제보하기</string>
    <string name="navigation_drawer_open">서랍 열기</string>
    <string name="navigation_drawer_close">서랍 닫기</string>
    <string name="nav_header_title">대소고\n대나무숲</string>
    <string name="post_ok">제보 성공\n제보된 글은 관리자의 승인 후 게시됩니다</string>
    <string name="post_error">모야 외않되</string>
    <string name="empty_error">좀 아니다 야</string>
    <string name="allow_ok">승인 완료</string>
    <string name="deny_ok">거부 완료</string>
    <string name="already_do">다른 관리자랑 겹쳐보리기</string>
    <string name="unknown_error">서지녁한테 문의하세요 오류남</string>
    <string name="post">제보하기</string>
    <string name="hint_post">내용</string>
    <string name="id">ID</string>
    <string name="password">PW</string>
    <string name="sign_in">로그인</string>
    <string name="admin_sign_in">관리자 로그인</string>
    <string name="logout">로그아웃</string>
    <string name="sign_in_error">관리자 하고 싶어요?</string>
    <string name="empty_user">승인된 글이 없음</string>
    <string name="empty_admin">승인을 기다리는 글이 없음</string>
    <string name="offline">연결되지 않음</string>
    <string name="etc">기타</string>
    <string name="bug_report">버그 신고</string>
    <string name="github">깃허브</string>
</resources>
